--- a/templates/transport_management/ak_notok_list.html
+++ b/templates/transport_management/ak_notok_list.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}POD List{% endblock title %}
+{% block title %}Aknowledgement Not Ok List{% endblock title %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
