--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="login-content">
                 <div class="login-logo">
-                    <h1 style="color: #fff">Vidhi Trailer Services</h2>
+                    <h1 style="color: #fff">Vidhi Trailer Services</h1>
                     <h2 style="color: #fff">Transport Management System</h2>
                 </div><br>
                 <div class="login-form">
@@ -52,9 +52,9 @@
                             <label>
                                 <input type="checkbox"> Remember Me
                             </label>
-                            <label class="pull-right">
+                            {% comment %} <label class="pull-right">
                                 <a href="#">Forgotten Password?</a>
-                            </label>
+                            </label> {% endcomment %}
 
                         </div>
                         <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Log in</button>
@@ -64,9 +64,9 @@
                                 <button type="button" class="btn social twitter btn-flat btn-addon mt-2"><i class="ti-twitter"></i>Sign in with twitter</button>
                             </div> {% endcomment %}
                         </div>
-                        <div class="register-link m-t-15 text-center">
+                        {% comment %} <div class="register-link m-t-15 text-center">
                             <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
-                        </div>
+                        </div> {% endcomment %}
                     </form>
                 </div>
             </div>
