--- a/templates/transport_management/client_list.html
+++ b/templates/transport_management/client_list.html
@@ -34,7 +34,7 @@
     <div class="col-xl-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="box-title">Client List </h4>
+                <h4 class="box-title">Clients List </h4>
             </div>
             <div class="card-body--">
                 {% for msg in messages %}
@@ -54,7 +54,7 @@
                                 <th>Phone Number</th>
                                 <th>Email</th>
                                 <th>Address</th>
-                                <th>Date</th>
+                                <th>Created Date</th>
                                 {% comment %} <th>Action</th> {% endcomment %}
                             </tr>
                         </thead>
