--- a/templates/transport_management/create_pod.html
+++ b/templates/transport_management/create_pod.html
@@ -40,19 +40,11 @@
                 <!-- Credit Card -->
                 <div id="pay-invoice">
                     <div class="card-body">
-                        <form action="#" method="post" novalidate="novalidate">
+                        <form action="#" method="post" novalidate="novalidate" onsubmit="return confirm ('Are you sure? Data once submitted cannot be changed !!!')">
                             <div>
                                 {% csrf_token %}
                                 {{form}}<br>
-                                {% comment %} <div class="form-group">
-                                    <label for="order" class="control-label mb-1">Order</label>
-                                    {{ form.order }}
-                                </div>
-                                <div class="form-group">
-                                    <label for="courier_name" class="control-label mb-1">Courier Name</label>
-                                    {{ form.courier_name }}
-                                </div>
-                                <div> {% endcomment %}
+                                
                                     <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                         <span id="payment-button-amount">Create POD</span>
                                     </button>
