--- a/templates/transport_management/create_product.html
+++ b/templates/transport_management/create_product.html
@@ -40,19 +40,11 @@
                 <!-- Credit Card -->
                 <div id="pay-invoice">
                     <div class="card-body">
-                        <form action="#" method="post" novalidate="novalidate">
+                        <form action="#" method="post" novalidate="novalidate" onsubmit="return confirm ('Are you sure? Data once submitted cannot be changed !!!')">
                             <div>
                             {% csrf_token %}
                             {{form}}
-                            {% comment %} <div class="form-group">
-                                <label for="name" class="control-label mb-1">Name</label>
-                                {{ form.name }}
-                            </div>
-                            <div class="form-group">
-                                <label for="sortno" class="control-label mb-1">Weight (in kgs)</label>
-                                {{ form.sortno }}
-                            </div>
-                            <div> {% endcomment %}
+                            
                                 <br>
                                 <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                     <span id="payment-button-amount">Create Product</span>
