--- a/templates/transport_management/create_vehicle.html
+++ b/templates/transport_management/create_vehicle.html
@@ -40,40 +40,11 @@
                 <!-- Credit Card -->
                 <div id="pay-invoice">
                     <div class="card-body">
-                        <form action="#" method="post" novalidate="novalidate">
+                        <form action="#" method="post" novalidate="novalidate" onsubmit="return confirm ('Are you sure? Data once submitted cannot be changed !!!')">
                             {% csrf_token %}
                             {{form}}
                             <br>
-                            <!-- <div class="form-group">
-                                <label for="name" class="control-label mb-1">Name</label>
-                                {{ form.name }}
-                            </div>
-                            <div class="form-group">
-                                <label for="address" class="control-label mb-1">Address</label>
-                                {{ form.address }}
-                            </div>
-                            <div class="form-group">
-                                <label for="email" class="control-label mb-1">Email</label>
-                                {{ form.email }}
-                            </div>
-                            <div class="form-group">
-                                <label for="username" class="control-label mb-1">Username</label>
-                                {{ form.username }}
-                            </div> -->
-                            <!-- <div class="row">
-                                <div class="col-6">
-                                    <div class="form-group">
-                                        <label for="password" class="control-label mb-1">Password</label>
-                                        {{ form.password }}
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="form-group">
-                                        <label for="retype_password" class="control-label mb-1">Retype Password</label>
-                                        {{ form.retype_password }}
-                                    </div>
-                                </div>
-                            </div> -->
+                            
                             <div>
                                 <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
                                     <span id="payment-button-amount">Create Vehicle</span>
