--- a/templates/transport_management/pod_list.html
+++ b/templates/transport_management/pod_list.html
@@ -34,7 +34,7 @@
     <div class="col-xl-12">
         <div class="card">
             <div class="card-body">
-                <h4 class="box-title">POD List </h4>
+                <h4 class="box-title">PODs List </h4>
             </div>
             <div class="card-body--">
                 {% for msg in messages %}
