--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -159,6 +159,24 @@
 
         <div class="col-lg-3 col-md-6">
             <div class="card">
+                <div class="card-body"><a href="{% url 'payment-list' %}">
+                    <div class="stat-widget-five">
+                        <div class="stat-icon dib flat-color-5">
+                            <i class="fa fa-money"></i>
+                        </div>
+                        <div class="stat-content">
+                            <div class="text-left dib">
+                                <div class="stat-text"><span class="count">{{ profit }}</span></div>
+                                <div class="stat-heading">Profit (₹)</div>
+                            </div>
+                        </div>
+                    </div>
+                </div></a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <div class="card">
                 <div class="card-body"><a href="{% url 'pod-received-list' %}">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-1">
